Version 2.12, 3 october 2012

130. Bump comLib version-info to 11:0:2 for recent API additions.
129. Implement csMboxUpdate() and gcomUpdate() for resizing mailboxes (requests
     and/or replies) associated with a task. This makes sense only after a
     successful csMboxInit() or gcomInit(). Shrinking mailboxes is not allowed
     to avoid potential issues with legacy code.
128. Implement mboxResize() for resizing an mboxLib mailbox.
127. Implement h2rngRealloc() for resizing h2 ring buffers. Shrinking is
     explicitly disallowed.
126. Fix internal timer for the h2initGlob(1) case (1 tick per second)
125. Make sure smMemRealloc() does not read uninitialized bytes when copying
     the content of previous memory block.
124. Let posterRead()/posterWrite() also return the number of bytes read/write
     in the remote case.
123. Fix bounds checks in posterRead()/posterWrite()
122. Add FIO_RESIZE posterIoctl command, for resizing an existing poster.
121. Reconnect regression test to the build after automake switch.
120. Fix built-in posterServ path by using the right automake bindir variable

Version 2.11, 27 october 2011

119. Merge errorLib into portLib.
118. Switch build system to automake.
117. [h2devLib] don't call posterLib functions to free a poster.
116. [posterLib] add posterForget() to invalidate a posterId.

Version 2.10, 3 october 2011

115. New h2logMsg() API for syslog-style logging of events
114. More LP64 fixes, a few places were still using ints for taskIds
113. Activate the code that sets pthread scheduler policy and parameters
     for new tasks if available

Version 2.9, 11 february 2011

112. Implement taskSpawn2() a version of taskSpawn() that takes a single
     void pointer for arguments. This is the only working solution on 
     x86_64 architectures, because of the C calling conventions used there.
111. Implement remotePosterShow().
110. Add a regression test for parameters passig with taskSpawn.
109. Fix logMsg() on LP64 architectures.