@@ -43,13 +43,9 @@ typedef struct H2TIMESPEC_STR {
 } H2TIMESPEC;
 
 /* Prototypes */
-struct timeval;
-
 extern STATUS h2timeAdj ( H2TIME *pTimeStr );
 extern STATUS h2timeGet ( H2TIME *pTimeStr );
 extern STATUS h2GetTimeSpec(H2TIMESPEC *pTs);
-extern void h2timeFromTimeval(H2TIME* pTimeStr, const struct timeval* tv);
-extern void timevalFromH2time(struct timeval* tv, const H2TIME* pTimeStr);
 extern void h2timeFromTimespec(H2TIME* pTimeStr, const H2TIMESPEC* ts);
 extern void timespecFromH2time(H2TIMESPEC* ts, const H2TIME* pTimeStr);
 extern void h2timeInit ( void );
